# Piccolo

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/source/editor/: CMakeLists.txt
engine/source/meta_parser/: CMakeLists.txt
engine/source/precompile/: precompile.cmake
engine/source/runtime/: CMakeLists.txt
